# gowtham_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bot_control/lib/bot_control/: reading_laser
install/bot_control/share/bot_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bot_control/share/bot_control/cmake/: bot_controlConfig-version.cmake  bot_controlConfig.cmake
install/bot_control/share/bot_control/environment/: ament_prefix_path.dsv  path.dsv
install/bot_control/share/bot_control/launch/: control.launch.py
install/bot_description/share/bot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bot_description/share/bot_description/cmake/: bot_descriptionConfig-version.cmake  bot_descriptionConfig.cmake
install/bot_description/share/bot_description/description/: inertial_macros.xacro
install/bot_world/lib/bot_world/: reading_laser
install/bot_world/share/bot_world/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/gowtham_ros/share/gowtham_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_control/share/robot_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/bot_control/: CMakeLists.txt  package.xml
src/bot_control/launch/: control.launch.py
src/bot_control/scripts/: reading_laser.cpp
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/description/: robot.urdf.xacro  robot_core.xacro
src/bot_description/launch/: rviz.py  spawn.launch.py
src/bot_world/: CMakeLists.txt  package.xml
src/bot_world/launch/: world.launch.py
src/bot_world/worlds/: obstacles.world
(+51 files in other folders)
